# SolarSystemOpenGL

./: .gitignore  CMakeLists.txt  README.md  classDiagram.uml
assets/shaders/: SkyBox.fs.glsl  SkyBox.vs.glsl  SolarSphereObject.fs.glsl  SolarSphereObject.vs.glsl
include/solar/: Camera.hpp  CameraController.hpp  ControlsManager.hpp  Drawable.hpp  Engine.hpp  GLManager.hpp  LightSource.hpp  OrbitLine.hpp  PhysicsEngine.hpp  RenderEngine.hpp  Ring.hpp  Simulable.hpp  SkyBox.hpp  SolarSphere.hpp  SolarSphereBase.hpp  SolarSphereDecorator.hpp  SolarSphereObject.hpp  Star.hpp  Transformable.hpp  View.hpp
lib/: CMakeLists.txt
lib/glimac/: CMakeLists.txt
lib/glimac/include/glimac/: TrackballCamera.hpp
lib/glimac/src/: TrackballCamera.cpp
lib/glm/: CMakeLists.txt
src/: App.cpp  Camera.cpp  CameraController.cpp  ControlsManager.cpp  Engine.cpp  GLManager.cpp  OrbitLine.cpp  PhysicsEngine.cpp  RenderEngine.cpp  Ring.cpp  SkyBox.cpp  SolarSphereBase.cpp  SolarSphereDecorator.cpp  SolarSphereObject.cpp  Star.cpp  View.cpp  exo1.cpp
